# direct_visual_lidar_calibration

./: .dockerignore  .gitmodules  404.html  CMakeLists.txt  README.md  index.html  mkdocs.yml  package.xml  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: balm.yaml  build.yaml  push.yaml
cmake/: FindGTSAM.cmake  FindIridescence.cmake  direct_visual_lidar_calibrationConfig.cmake.in
collection/: index.html
css/: custom.css
docker/: index.html
docker/humble/: Dockerfile  Dockerfile_with_superglue
docker/jazzy/: Dockerfile  Dockerfile_with_superglue
docker/noetic/: Dockerfile  Dockerfile_with_superglue
docs/: calibration.md  collection.md  docker.md  example.md  example_map.md  index.md  installation.md  programs.md  usage.md
example/: index.html
example_map/: index.html
include/camera/: atan.hpp  create_camera.hpp  equirectangular.hpp  fisheye.hpp  generic_camera.hpp  generic_camera_base.hpp  omnidir.hpp  pinhole.hpp  rational_polynomial.hpp  traits.hpp
include/dfo/: directional_direct_search.hpp  nelder_mead.hpp  optimizer.hpp
include/test/: detect_sphere.hpp
include/test/calib/: cost_scaller.hpp  edge_extraction.hpp  line_fitting.hpp  nearest_neighbor_search.hpp
include/vlcal/calib/: cost_calculator.hpp  cost_calculator_edge.hpp  cost_calculator_nid.hpp  nearest_neighbor_search.hpp  view_culling.hpp  visual_camera_calibration.hpp
include/vlcal/common/: cloud_covariance_estimation.hpp  concurrent_queue.hpp  console_colors.hpp  create_camera.hpp  estimate_fov.hpp  estimate_pose.hpp  estimate_rotation.hpp  frame.hpp  frame_cpu.hpp  frame_traits.hpp  integrated_ct_gicp_factor.hpp  integrated_ct_gicp_factor_impl.hpp  integrated_ct_icp_factor.hpp  integrated_ct_icp_factor_impl.hpp  ivox.hpp  kdtree2.hpp  nearest_neighbor_search.hpp  points_color_updater.hpp  raw_points.hpp  ros_cloud_converter.hpp  statistical_median_filter.hpp  time_keeper.hpp  vector3i_hash.hpp  visual_lidar_data.hpp  visual_lidar_visualizer.hpp
include/vlcal/costs/: nid_cost.hpp  reprojection_cost.hpp
include/vlcal/preprocess/: dynamic_point_cloud_integrator.hpp  generate_lidar_image.hpp  point_cloud_integrator.hpp  preprocess.hpp  static_point_cloud_integrator.hpp
installation/: index.html
programs/: index.html
scripts/: find_matches_superglue.py
scripts/test/: find_spheres.py
search/: search_index.json
src/: calib.cpp  calibrate.cpp  gen_image.cpp  initial_guess_auto.cpp  initial_guess_manual.cpp  plane_test.cpp  preprocess.cpp  preprocess_map.cpp  preprocess_ros1.cpp  preprocess_ros2.cpp  viewer.cpp
src/camera/: create_camera.cpp  generic_camera.cpp
src/test/: detect_sphere.cpp  normalization.cpp  outliers.cpp  reference.cpp  vis.cpp
src/test/calib/: edge_extraction.cpp
src/vlcal/calib/: cost_calculator_edge.cpp  cost_calculator_nid.cpp  edge_extraction.cpp  line_fitting.cpp  nearest_neighbor_search.cpp  view_culling.cpp  visual_camera_calibration.cpp
src/vlcal/common/: cloud_covariance_estimation.cpp  create_camera.cpp  estimate_fov.cpp  estimate_pose.cpp  estimate_rotation.cpp  frame.cpp  frame_cpu.cpp  ivox.cpp  points_color_updater.cpp  time_keeper.cpp  visual_lidar_data.cpp  visual_lidar_visualizer.cpp
src/vlcal/preprocess/: dynamic_point_cloud_integrator.cpp  generate_lidar_image.cpp  point_cloud_integrator.cpp  preprocess.cpp  static_point_cloud_integrator.cpp
