<?xml version="1.0"?>
<package format="3">
  <name>direct_visual_lidar_calibration</name>
  <version>0.0.0</version>
  <description>LiDAR-Camera calibration based on NID-based direct image-pointcloud registration</description>

  <maintainer email="k.koide@aist.go.jp">k.koide</maintainer>

  <license>MIT</license>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake_python</buildtool_depend>
  
  <depend condition="$ROS_VERSION == 1">roscpp</depend>
  <depend condition="$ROS_VERSION == 1">rosbag</depend>
  <depend condition="$ROS_VERSION == 2">rclcpp</depend>
  <depend condition="$ROS_VERSION == 2">rosbag2_cpp</depend>

  <depend>fmt</depend>
  <depend>cv_bridge</depend>
  <depend>pcl_ros</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>
</package>
